Changes made by Victor Enrique Malaver Salcedo (kike.doohs.apps@gmail.com). Sin publicidad

--- a/CalzadoFalabella/.app.json
+++ b/CalzadoFalabella/.app.json
@@ -143,6 +143,24 @@
                   "titlePosition": "top",
                   "inputTextType": "text",
                   "dataBinding": "estado"
+                },
+                {
+                  "type": "NativeScript:editableListFormField",
+                  "name": "color",
+                  "title": "Color",
+                  "inputType": "text",
+                  "titlePosition": "top",
+                  "inputTextType": "text",
+                  "dataBinding": "color"
+                },
+                {
+                  "type": "NativeScript:editableListFormField",
+                  "name": "talla",
+                  "title": "Talla",
+                  "inputType": "text",
+                  "titlePosition": "top",
+                  "inputTextType": "text",
+                  "dataBinding": "talla"
                 }
               ],
               "name": "editableListForm33",
